crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__grok__gate-both-ways.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- ModelInfo:
    agent_id: 9736723902978984545
    model: grok-4.6
    effort: ~
- ActivityStart:
    agent_id: 9736723902978984545
    tool_use_id: call-82befd5f-87a8-4a1b-b5d4-9b1938c92ddc-0
    detail:
      Generic:
        display: run_terminal_command
- ActivityEnd:
    agent_id: 9736723902978984545
    tool_use_id: ~
- ActivityEnd:
    agent_id: 9736723902978984545
    tool_use_id: call-82befd5f-87a8-4a1b-b5d4-9b1938c92ddc-0
- SessionEnd:
    agent_id: 9736723902978984545
    as_child: false
- SessionStart:
    agent_id: 9736723902978984545
    source: grok
    session_id: 01a0064a-e4c0-7c92-8ac0-b9e363af3aa6
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- SessionStart:
    agent_id: 9736723902978984545
    source: grok
    session_id: 01a0064a-e4c0-7c92-8ac0-b9e363af3aa6
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- Identity:
    agent_id: 9736723902978984545
    source: grok
    session_id: 01a0064a-e4c0-7c92-8ac0-b9e363af3aa6
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 9736723902978984545
    tool_use_id: call-82befd5f-87a8-4a1b-b5d4-9b1938c92ddc-0
    detail:
      Generic:
        display: "run_terminal_command: rm NOTE.txt"
- Identity:
    agent_id: 9736723902978984545
    source: grok
    session_id: 01a0064a-e4c0-7c92-8ac0-b9e363af3aa6
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 9736723902978984545
    tool_use_id: call-82befd5f-87a8-4a1b-b5d4-9b1938c92ddc-0
- SessionEnd:
    agent_id: 9736723902978984545
    as_child: false
- ActivityEnd:
    agent_id: 9736723902978984545
    tool_use_id: ~
