crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__grok__permission-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- ModelInfo:
    agent_id: 1975995280667210078
    model: grok-4.6
    effort: ~
- ActivityStart:
    agent_id: 1975995280667210078
    tool_use_id: call-713f6dac-5d10-4a74-85be-1539c5b24f22-0
    detail:
      Generic:
        display: run_terminal_command
- ActivityEnd:
    agent_id: 1975995280667210078
    tool_use_id: call-713f6dac-5d10-4a74-85be-1539c5b24f22-0
- ActivityEnd:
    agent_id: 1975995280667210078
    tool_use_id: ~
- SessionStart:
    agent_id: 1975995280667210078
    source: grok
    session_id: 01a0059d-ece9-7931-8e07-c91d77ba5943
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- SessionStart:
    agent_id: 1975995280667210078
    source: grok
    session_id: 01a0059d-ece9-7931-8e07-c91d77ba5943
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- Identity:
    agent_id: 1975995280667210078
    source: grok
    session_id: 01a0059d-ece9-7931-8e07-c91d77ba5943
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 1975995280667210078
    tool_use_id: call-713f6dac-5d10-4a74-85be-1539c5b24f22-0
    detail:
      Generic:
        display: "run_terminal_command: rm -f NOTE.txt && ls -la NOTE.txt 2>&1 |…"
- Identity:
    agent_id: 1975995280667210078
    source: grok
    session_id: 01a0059d-ece9-7931-8e07-c91d77ba5943
    cwd: /private/tmp/pixtuoid-capture/proj
- Waiting:
    agent_id: 1975995280667210078
    reason: Tool permission requested
- Identity:
    agent_id: 1975995280667210078
    source: grok
    session_id: 01a0059d-ece9-7931-8e07-c91d77ba5943
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 1975995280667210078
    tool_use_id: call-713f6dac-5d10-4a74-85be-1539c5b24f22-0
- ActivityEnd:
    agent_id: 1975995280667210078
    tool_use_id: ~
