crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__grok__tool-run.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- ActivityStart:
    agent_id: 3721754798848384957
    tool_use_id: call-f1963737-4e4d-426c-88a2-85e86077c30b-0
    detail:
      Generic:
        display: run_terminal_command
- ActivityEnd:
    agent_id: 3721754798848384957
    tool_use_id: call-f1963737-4e4d-426c-88a2-85e86077c30b-0
- ModelInfo:
    agent_id: 3721754798848384957
    model: grok-4-code
    effort: high
- ActivityEnd:
    agent_id: 3721754798848384957
    tool_use_id: ~
- SessionStart:
    agent_id: 3721754798848384957
    source: grok
    session_id: tool-run
    cwd: /Users/dev/proj
    parent_id: ~
- Identity:
    agent_id: 3721754798848384957
    source: grok
    session_id: tool-run
    cwd: /Users/dev/proj
- ActivityStart:
    agent_id: 3721754798848384957
    tool_use_id: call-f1963737-4e4d-426c-88a2-85e86077c30b-0
    detail:
      Generic:
        display: "run_terminal_command: cat note.txt"
- Identity:
    agent_id: 3721754798848384957
    source: grok
    session_id: tool-run
    cwd: /Users/dev/proj
- ActivityEnd:
    agent_id: 3721754798848384957
    tool_use_id: call-f1963737-4e4d-426c-88a2-85e86077c30b-0
- ActivityEnd:
    agent_id: 3721754798848384957
    tool_use_id: ~
